--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,21 @@ cache: pip
 python:
   - "3.6"
 env:
+  global:
+    - TF_PYTHON="False"
+    - TF_EAGER="False"
   matrix:
     - TF_VERSION="1.14.0" KERAS_VERSION="2.2.5" TF_KERAS="False"
     - TF_VERSION="1.14.0" KERAS_VERSION="2.2.5" TF_KERAS="True"
     - TF_VERSION="2.0.0"  KERAS_VERSION="2.3.0" TF_KERAS="False" TF_EAGER="True"
-    - TF_VERSION="2.0.0"  KERAS_VERSION="2.3.0" TF_KERAS="False" TF_EAGER="False"
+    - TF_VERSION="2.0.0"  KERAS_VERSION="2.3.0" TF_KERAS="False" 
     - TF_VERSION="2.0.0"  KERAS_VERSION="2.3.0" TF_KERAS="True"  TF_EAGER="True"
-    - TF_VERSION="2.0.0"  KERAS_VERSION="2.3.0" TF_KERAS="True"  TF_EAGER="False"
-    - TF_VERSION="2.0.0"  KERAS_VERSION="2.3.0" TF_PYTHON="True" TF_EAGER="True"
+    - TF_VERSION="2.0.0"  KERAS_VERSION="2.3.0" TF_KERAS="True"  
+    - TF_VERSION="2.0.0"  KERAS_VERSION="2.3.0"                  TF_EAGER="True"
 
 notifications:
   email: false
-  
+
 before_install:
   - chmod +x test.sh
   - sudo apt-get update
@@ -52,7 +55,7 @@ install:
   
 script:
  - ./test.sh
-    
+
 after_success:
   # Combine coverage reports from Travis jobs
   - coverage combine --append
