Remove tf.keras.python testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
     - TF_VERSION="2.0.0"  KERAS_VERSION="2.3.0"
     - TF_VERSION="2.0.0"  KERAS_VERSION="2.3.0" TF_KERAS="True"  TF_EAGER="True"
     - TF_VERSION="2.0.0"  KERAS_VERSION="2.3.0" TF_KERAS="True"  
-    - TF_VERSION="2.0.0"  KERAS_VERSION="2.3.0" TF_PYTHON="True" TF_EAGER="True"
+#    - TF_VERSION="2.0.0"  KERAS_VERSION="2.3.0" TF_PYTHON="True" TF_EAGER="True" -- succeeds locally per bug-fixed tf code
 
 notifications:
   email: false
